styles/index.css
/* Removing/Resetting default values of HTML, CSS
and user-agents */
* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
}

html{
  height: 100%;
}

a {
  text-decoration: none;
}

ul li {
  margin: 0.5em;
  display: inline;
}

body {
  min-height: 100%;
  display: grid;
  grid-template-columns: 1fr;
  grid-template-rows: auto 1fr auto;
  grid-template-areas:
  "header"
  "main"
  "footer";
}

header {
  grid-area: header;
  text-transform: uppercase;
  
  display: grid;
  grid-template-columns: 1fr;
  grid-template-areas:
  "name"
  "nav"
  "hr";
}   

h1 {
  grid-area: name;
  font-size: 1.5em;
  margin: 0.5em auto 0 auto;
}

#nav-header {
  grid-area: nav;
  padding: 0 0.7em 0 0.7em;
  display: grid;
  grid-template-columns: repeat(5, 1fr);
  column-gap: 1em;
  justify-items: center;
  overflow-x: scroll;
  line-height: 3em;
}

#div-hr {
  grid-area: hr;
}

main {
  grid-area: main;
}

section {
  margin-top: 3em;
  font-size: 2em;
  display: grid;
  grid-template-columns: 1fr;
  grid-template-areas:
  "code-icon"
  "phrase"
  "stack-icons";
  row-gap: 0.7em;
  justify-items: center;
}

.fa-code {
  grid-area: code-icon;
  font-size: 2em;
}

#presentation-main {
  grid-area: phrase;
}

#presentation-main ul {
  grid-area: stack-icons;
}

footer {
  grid-area: footer;
  padding-bottom: 1em;
  display: grid;
  grid-template-columns: 1fr;
  grid-template-areas:
  "phrase"
  "connect-icons";
  justify-items: center;
}

footer h2 {
  grid-area: phrase;
  font-size: 1.5em;
}

footer ul {
  grid-area: connect-icons;
  font-size: 2em;
}

footer i{
  font-size: 0.7em;
}

footer i:hover {
  transform: scale(1.5);
}

